<resources>
    <string name="app_name">Qavach</string>
    <string name="description">
        "What is COVID - 19.\n\n"

        "Coronavirus disease (COVID-19) is an infectious disease caused by a new virus."
        "The disease causes respiratory illness (like the flu) with symptoms such as a cough, fever,"
        "and in more severe cases, difficulty breathing. You can protect yourself by washing your "
        "hands frequently, avoiding touching your face, and avoiding close contact (1 meter or 3 feet)"
        " with people who are unwell.\n\n"

        "HOW IT SPREADS.\n\n"

        "Coronavirus disease spreads primarily through contact with an infected person when they "
        "cough or sneeze. It also spreads when a person touches a surface or object that has the "
        "virus on it, then touches their eyes, nose, or mouth.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "SIGNS AND SYMPTOMS.\n\n"

        "Although those infected with the virus may be asymptomatic, many develop flu-like symptoms, "
        "including fever, cough, and shortness of breath. Emergency symptoms include difficulty"
        " breathing, persistent chest pain or pressure, confusion, difficulty waking, and bluish face or lips;"
        " immediate medical attention is advised if these symptoms are present. Less commonly, upper "
        "respiratory symptoms, such as sneezing, runny nose, or sore throat may be seen. Symptoms such as nausea,"
        " vomiting, and diarrhea have been observed in varying percentages from 3% to 31% of cases depending on the"
        " study. Some cases in China initially presented only with chest tightness and palpitations."
        " In some, the disease may progress to pneumonia, multi-organ failure, and death.\n\n"

        "CAUSE\n\n"

        "The disease is caused by the virus severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2), "
        "previously referred to as the 2019 novel coronavirus (2019-nCoV). It is primarily spread between "
        "people via respiratory droplets from coughs and sneezes. A study investigating the rate of decay of "
        "the virus found no viable viruses after 4 h on copper, 24 h on cardboard, 72 h on stainless steel, "
        "and 72 h on plastic. However, detection rates did not reach 100% and varied between surface type ."
        "Estimation of the rate of decay with a Bayesian regression model suggests that viruses may remain "
        "viable up to 18 h on copper, 55 h on cardboard, 90 h on stainless steel, and over 100 h on plastic. "
        "The virus remained viable in aerosols throughout the time of the experiment (3 h). The virus has also "
        "been found in faeces, and transmission through faeces is being researched\n\n"

        "PREVENTION.\n\n"

        "Preventive measures to reduce the chances of infection include staying at home, avoiding crowded places, "
        "washing hands with soap and warm water often and for at least 20 seconds, practicing good respiratory hygiene "
        "and avoiding touching the eyes, nose, or mouth with unwashed hands. The CDC recommends covering "
        "the mouth and nose with a tissue when coughing or sneezing, or using inside of the elbow if no tissue is available."
        " They also recommend proper hand hygiene after any cough or sneeze. Social distancing strategies aim to reduce "
        "contact of infected persons with large groups by closing schools and workplaces, restricting travel, and canceling "
        "mass gatherings. Social distancing also includes that people stay at least 6 feet apart (about 1.80 meters)..\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="intro_button">Contribute yourself against Covid19 Pandemic</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="result">Covid Risk Result</string>
    <string name="advice_title">Based on your inputs, Qavach 24 X 7 advises the following:</string>
    <string name="advice_description">"1. Stay home and take care of yourself in home isolation\n\n2. Prevention and precautions SEE BELOW\n\n3. Laboratory tests and imaging are optional (and as per your physician's advice)\n\n4. COVID19 testing may be required at your physician's advise"
    </string>
    <string name="prevention_title">Prevention and Precautions - Basic protective measures</string>
    <string name="prevention_description">"Be aware or Educate yourself with the latest updates on the following websites : WHO &amp; MoHFW\n\nMost people who become infected experienve mild illness and recover, but it can be more evere for others. Take care of your health and protect others by doing the following:\n\nWash your hands frequently\nRegularly and thoroughly clean your hands with an alcohol-base hand rub or wash them with soap and water.\n\nMaintain social distancing\nMaintain at least 2 metre (6 feet) distance between yourself and anyone who is coughin or sneezing.\n\nAvoid touching eyes, nose and mouth\nOur hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth\n\nPractise respiratory hygiene\nMake sure you and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately.\n\nIf you have fever, cough and difficulty in breathing, seek medical care early.\nStay home if you feel unwell. If you have a high fever moderate to severe cough and difficulty in breathing and it is worsening in short period of time, seek medical asistance and call in advance."
    </string>
</resources>
