<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.result.ResultActivity"
    tools:showIn="@layout/activity_result">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/d3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_shadow">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d2"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start"
            android:padding="@dimen/d2"
            android:text="@string/result"
            android:textAllCaps="true"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d3"
            android:background="@drawable/round_corner_button_bg"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border_rect_bg"
                android:orientation="vertical"
                android:padding="@dimen/d2">

                <TextView
                    android:id="@+id/riskTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="High"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <TextView
                    android:id="@+id/riskDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="start"
                    android:paddingTop="@dimen/d1"
                    android:text="Respiratory Illness"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/advise_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d3"
            android:background="@drawable/round_corner_button_bg"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:layout_constraintTop_toBottomOf="@+id/title_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border_rect_bg"
                android:orientation="vertical"
                android:padding="@dimen/d2">

                <TextView
                    android:id="@+id/adviceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="start"
                    android:text="@string/advice_title"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <TextView
                    android:id="@+id/adviceDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="start"
                    android:lineSpacingExtra="1dp"
                    android:paddingTop="@dimen/d2"
                    android:text="@string/advice_description"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/prevention_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d3"
            android:background="@drawable/round_corner_button_bg"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:layout_constraintTop_toBottomOf="@+id/advise_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border_rect_bg"
                android:orientation="vertical"
                android:padding="@dimen/d2">

                <TextView
                    android:id="@+id/preventionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="start"
                    android:text="@string/prevention_title"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <TextView
                    android:id="@+id/preventionDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="start"
                    android:lineSpacingExtra="1dp"
                    android:paddingTop="@dimen/d2"
                    android:text="@string/prevention_description"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
